dh-make-perl (0.57) UNRELEASED; urgency=low

  * Bump Standards-Version to 3.8.2
    + in debian/control (no changes needed)
    + in generated package's debian/control
    + in t/dists

 -- Nathan Handler <nhandler@ubuntu.com>  Wed, 17 Jun 2009 13:24:08 +0000

dh-make-perl (0.56) unstable; urgency=low

  [ gregor herrmann ]
  * Add the whole Debian::Dependency object to the deps hash in
    Debian::Dependencies' prune function instead of just the version; fixes
    "Can't call method "ver" without a package or object reference at
    /usr/share/perl5/Debian/Dependencies.pm line 125." error that occurs when
    a package is listed more than once in %deps.

  [ Ryan Niebur ]
  * remove useless comments from watch file
  * don't include .svn-base files in the docs. this fixes running the
    tests in a subversion checkout and fixes a really annoying bug where
    .svn-base files get added when you --refresh under an svn checkout.
  * depends on libparse-debianchangelog-perl (Closes: #526660)

  [ Damyan Ivanov ]
  * add 'make' to the list of commands
  * remove code supporting CPAN < 1.9205, which is what ships with
    perl-modules 5.10 (on which we already depend)
  * move CPAN configuration into a method
  * move finding CPAN module object for given module name into a method
  * when a dependency module package is not found, guess the package name
    after the CPAN distribution that contains the module

  * Dependency classes improvements:
    + there is no '==' dependency relation; it is '='
    + when checking for duplicate or overlapping dependencies, all kinds of
      version relations are supported
    + Dependencies: add overloading of 'eq' and '<=>' operators
    + null versions ("0", "0.000" and similar) are now ignored
    + add support for alternative dependencies (foo | bar)
  * --refresh additions
    + add/drop quilt from debian/rules and debian/control depending on
      presense of debian/patches/series; also try to keep README.source up to